fix(workflow): provide SUPABASE_KEY env var

--- a/.github/workflows/update-plant-inverters.yml
+++ b/.github/workflows/update-plant-inverters.yml
@@ -23,9 +23,10 @@ jobs:
       - name: Run update_plant_inverters
         env:
           PYTHONPATH: ${{ github.workspace }}
-          SUNSYNK_CLIENT_ID:      ${{ secrets.SUNSYNK_CLIENT_ID }}
-          SUNSYNK_SECRET:         ${{ secrets.SUNSYNK_SECRET }}
-          SUPABASE_URL:           ${{ secrets.SUPABASE_URL }}
-          # 👇 expose the same secret under the expected var-name
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          SUNSYNK_CLIENT_ID: ${{ secrets.SUNSYNK_CLIENT_ID }}
+          SUNSYNK_SECRET:    ${{ secrets.SUNSYNK_SECRET }}   # remove or keep if you have it
+          SUPABASE_URL:      ${{ secrets.SUPABASE_URL }}
+
+          # 👇 the variable name the client code expects
+          SUPABASE_KEY:      ${{ secrets.SUPABASE_KEY }}
         run: python -m workflows.update_plant_inverters
