--- a/.github/workflows/update-plant-inverters.yml
+++ b/.github/workflows/update-plant-inverters.yml
@@ -1,18 +1,21 @@
-name: Update Plant-Inverters (daily)
+# .github/workflows/update-plant-inverters.yml
+name: Nightly Plant-Inverter Sync   # ← UPDATED workflow name
 
 on:
   schedule:
-    - cron: '0 22 * * *'      # 00:00 SAST
+    # 00:00 SAST → 22:00 UTC every day
+    - cron: '0 22 * * *'
   workflow_dispatch:
 
 jobs:
   update-plant-inverters:
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
@@ -24,12 +27,14 @@ jobs:
         env:
           PYTHONPATH: ${{ github.workspace }}
 
-          # ── Sunsynk ────────────────────────────────
+          # ── Sunsynk creds ─────────────────────────
           SUNSYNK_USERNAME:   ${{ secrets.SUNSYNK_USERNAME }}
           SUNSYNK_PASSWORD:   ${{ secrets.SUNSYNK_PASSWORD }}
 
-          # ── Supabase ───────────────────────────────
+          # ── Supabase creds ────────────────────────
           SUPABASE_URL:       ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY:       ${{ secrets.SUPABASE_KEY }}
+          USER_EMAIL:         ${{ secrets.USER_EMAIL }}
+          USER_PASSWORD:      ${{ secrets.USER_PASSWORD }}
 
         run: python -m workflows.update_plant_inverters
