--- a/.github/workflows/update-estate-plant.yml
+++ b/.github/workflows/update-estate-plant.yml
@@ -1,45 +1,32 @@
-# .github/workflows/update-estate-plant.yml
-name: Sync estate_plant table (hourly)
+name: Hourly Update Estate Plant
 
 on:
   schedule:
-    # At minute 0 past *every* hour
-    - cron: '0 * * * *'
-  workflow_dispatch:   # ← allows manual “Run workflow” button
+    - cron: '0 * * * *'        # ← every hour, on the hour (UTC)
+  workflow_dispatch:
 
 jobs:
-  update-estate-plant:
+  update-plant-inverters:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Check out repo
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
 
-      # 2. Set up Python (adjust 3.11 if you use a different version)
-      - uses: actions/setup-python@v5
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
-      # 3. Install dependencies
-      - name: Install requirements
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-      # 4. Export secrets (Supabase keys, Sunsynk creds, etc.)
-      - name: Export env vars
+      - name: Run update_estate_plant
         env:
-          SUPABASE_URL:   ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY:   ${{ secrets.SUPABASE_SERVICE_ROLE }}
+          PYTHONPATH: ${{ github.workspace }}
           SUNSYNK_USERNAME: ${{ secrets.SUNSYNK_USERNAME }}
           SUNSYNK_PASSWORD: ${{ secrets.SUNSYNK_PASSWORD }}
-        run: |
-          echo "SUPABASE_URL=$SUPABASE_URL"         >> $GITHUB_ENV
-          echo "SUPABASE_KEY=$SUPABASE_KEY"         >> $GITHUB_ENV
-          echo "SUNSYNK_USERNAME=$SUNSYNK_USERNAME" >> $GITHUB_ENV
-          echo "SUNSYNK_PASSWORD=$SUNSYNK_PASSWORD" >> $GITHUB_ENV
-
-      # 5. Run the sync
-      - name: Run update_estate_plant
+          SUPABASE_URL:     ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY:     ${{ secrets.SUPABASE_KEY }}
+          USER_EMAIL:       ${{ secrets.USER_EMAIL }}
+          USER_PASSWORD:    ${{ secrets.USER_PASSWORD }}
         run: python -m workflows.update_estate_plant
