update yml - python -m workflows.update_plant_power -q

--- a/.github/workflows/update-plant-power.yml
+++ b/.github/workflows/update-plant-power.yml
@@ -36,4 +36,4 @@ jobs:
           SUPABASE_KEY:      ${{ secrets.SUPABASE_KEY }}
           USER_EMAIL:        ${{ secrets.USER_EMAIL }}
           USER_PASSWORD:     ${{ secrets.USER_PASSWORD }}
-        run: python -m workflows.update_plant_power --quiet
+        run: python -m workflows.update_plant_power -q
