--- a/.github/workflows/update-plant-power.yml
+++ b/.github/workflows/update-plant-power.yml
@@ -2,19 +2,18 @@
 # ────────────────────────────────────────────────────────────────────────────
 # 10-Minute Update Plant Power
 #
-# Sync Sunsynk → plant_power_10min every 30 minutes.
+# Sync Sunsynk → plant_power_10min every 10 minutes.
 # ────────────────────────────────────────────────────────────────────────────
-name: "10-Minute Update Plant Power"
+name: "Hourly Update Plant Power"
 
 on:
   schedule:
-    - cron: '*/0 * * * *'      # every 60 minutes (UTC)
-  workflow_dispatch:           # manual trigger
+    - cron: '0 * * * *'       # every hour (UTC)
+  workflow_dispatch:          # manual trigger
 
 jobs:
   update-plant-power:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -29,11 +28,12 @@ jobs:
 
       - name: Run update_plant_power
         env:
-          PYTHONPATH:        ${{ github.workspace }}
-          SUNSYNK_USERNAME:  ${{ secrets.SUNSYNK_USERNAME }}
-          SUNSYNK_PASSWORD:  ${{ secrets.SUNSYNK_PASSWORD }}
-          SUPABASE_URL:      ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY:      ${{ secrets.SUPABASE_KEY }}
-          USER_EMAIL:        ${{ secrets.USER_EMAIL }}
-          USER_PASSWORD:     ${{ secrets.USER_PASSWORD }}
+          PYTHONPATH:       ${{ github.workspace }}
+          SUNSYNK_USERNAME: ${{ secrets.SUNSYNK_USERNAME }}
+          SUNSYNK_PASSWORD: ${{ secrets.SUNSYNK_PASSWORD }}
+          SUPABASE_URL:     ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY:     ${{ secrets.SUPABASE_KEY }}
+          USER_EMAIL:       ${{ secrets.USER_EMAIL }}
+          USER_PASSWORD:    ${{ secrets.USER_PASSWORD }}
         run: python -m workflows.update_plant_power -q
+
