--- a/.github/workflows/update-estate-plant.yml
+++ b/.github/workflows/update-estate-plant.yml
@@ -1,23 +1,32 @@
-# .github/workflows/hourly-estate-plant.yml
-# ────────────────────────────────────────────────────────────────────────────
-# Hourly Update Estate Plant
-#
-# 1. Sync Sunsynk → public.estate_plant          (update_estate_plant)
-# 2. Snapshot rows  → estate_plant_daily_report  (update_estate_plant_daily_report)
-#
-# Both scripts use the same env-vars (Supabase + Sunsynk credentials).
-# ────────────────────────────────────────────────────────────────────────────
 name: Hourly Update Estate Plant
 
 on:
   schedule:
-    - cron: '0 * * * *'        # every hour, on the hour (UTC)
-  workflow_dispatch:           # manual trigger
+    - cron: '0 0 * * *'       # 00:00 UTC
+    - cron: '30 1 * * *'      # 01:30 UTC
+    - cron: '0 3 * * *'       # 03:00 UTC
+    - cron: '30 4 * * *'      # 04:30 UTC
+    - cron: '0 6 * * *'
+    - cron: '30 7 * * *'
+    - cron: '0 9 * * *'
+    - cron: '30 10 * * *'
+    - cron: '0 12 * * *'
+    - cron: '30 13 * * *'
+    - cron: '0 15 * * *'
+    - cron: '30 16 * * *'
+    - cron: '0 18 * * *'
+    - cron: '30 19 * * *'
+    - cron: '0 21 * * *'
+    - cron: '30 22 * * *'
+  workflow_dispatch:
+
+concurrency:
+  group: sunsynk-sync
+  cancel-in-progress: false   # wait instead of canceling
 
 jobs:
   update-estate-plant:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -30,7 +39,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # ─────────────────────────── step 1 ────────────────────────────
       - name: Run update_estate_plant
         env:
           PYTHONPATH:        ${{ github.workspace }}
@@ -42,7 +50,6 @@ jobs:
           USER_PASSWORD:     ${{ secrets.USER_PASSWORD }}
         run: python workflows/update_estate_plant.py --quiet
 
-      # ─────────────────────────── step 2 ────────────────────────────
       - name: Snapshot → estate_plant_daily_report
         env:
           PYTHONPATH:        ${{ github.workspace }}
@@ -50,6 +57,5 @@ jobs:
           SUPABASE_KEY:      ${{ secrets.SUPABASE_KEY }}
           USER_EMAIL:        ${{ secrets.USER_EMAIL }}
           USER_PASSWORD:     ${{ secrets.USER_PASSWORD }}
-          # optional: override default 1000-row page size
           SNAPSHOT_PAGE_SIZE: 15000
         run: python -m workflows.update_estate_plant_daily_report --quiet
