--- a/.github/workflows/update-plant-power.yml
+++ b/.github/workflows/update-plant-power.yml
@@ -1,17 +1,18 @@
 # .github/workflows/update-plant-power.yml
 # ────────────────────────────────────────────────────────────────────────────
-# Daily Update Plant Power (22:00 and 00:00 UTC, with a retry 30 min later)
-# Ensures only one instance runs at a time.
+# Daily Update Plant Power at 00:00 UTC with retries every 30 min until success.
+# Skips retries if success is already recorded for the day.
 # ────────────────────────────────────────────────────────────────────────────
 name: "Daily Update Plant Power"
 
 on:
   schedule:
-    - cron: '0 22 * * *'       # every day at 22:00 UTC
-    - cron: '30 22 * * *'      # retry at 22:30 UTC
-    - cron: '0 0 * * *'        # every day at 00:00 UTC
-    - cron: '30 0 * * *'       # retry at 00:30 UTC
-  workflow_dispatch:           # manual trigger
+    - cron: '0 0 * * *'      # 00:00 UTC
+    - cron: '30 0 * * *'     # Retry at 00:30
+    - cron: '0 1 * * *'      # Retry at 01:00
+    - cron: '30 1 * * *'     # Retry at 01:30
+    - cron: '0 2 * * *'      # Final retry at 02:00
+  workflow_dispatch:
 
 concurrency:
   group: update-plant-power
@@ -21,6 +22,22 @@ jobs:
   update-plant-power:
     runs-on: ubuntu-latest
     steps:
+      - name: Set current date
+        run: echo "DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
+
+      - name: Check cache for success flag
+        id: cache-check
+        uses: actions/cache@v4
+        with:
+          path: success-flag.txt
+          key: update-success-${{ env.DATE }}
+
+      - name: Skip if already successful
+        if: steps.cache-check.outputs.cache-hit == 'true'
+        run: |
+          echo "✅ Already updated today. Skipping run."
+          exit 0
+
       - name: Check out code
         uses: actions/checkout@v4
 
@@ -42,3 +59,14 @@ jobs:
           USER_EMAIL:       ${{ secrets.USER_EMAIL }}
           USER_PASSWORD:    ${{ secrets.USER_PASSWORD }}
         run: python -m workflows.update_plant_power -q
+
+      - name: Set success flag
+        if: success()
+        run: echo "success" > success-flag.txt
+
+      - name: Cache success flag
+        if: success()
+        uses: actions/cache@v4
+        with:
+          path: success-flag.txt
+          key: update-success-${{ env.DATE }}
